--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </p>
     </div>
     <div style="flex-shrink: 0; text-align: center; margin-top: 30px;">
-      <img src="c:\Users\user\OneDrive\Desktop\sathwika.jpg" alt="Kalavakuntla Sathwika" style="width: 180px; height: 180px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); border: 3px solid #2013d1; margin-top: 40px;">
+      <img src="sathwika.jpg" alt="Kalavakuntla Sathwika" style="width: 180px; height: 180px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); border: 3px solid #2013d1; margin-top: 40px;">
 
     </div>    
   </section>
