--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <h2>Projects</h2>
     <div class="projects-list">
       <div class="project">
-        <img src="c:\Users\user\OneDrive\Pictures\playwithfun.png" alt="Play With Fun">
+        <img src="playwithfun.png" alt="Play With Fun">
         <h3>Play With Fun</h3>
         <p>Devolped a gaming website consisting of some simple fun games.Created using platforms like Scratch and Visual Studio, integrating user-friendly
           interfaces.<br>
@@ -233,7 +233,7 @@
         <strong>Tools:</strong> Scratch, VS Code
       </div>
       <div class="project">
-        <img src="c:\Users\user\OneDrive\Desktop\oulearn.jpg" alt="OU Learn">
+        <img src="oulearn.jpg" alt="OU Learn">
         <h3>OU Learn</h3>
         <p>Designed a platform that provides personalized recommendations for internships,
           scholarships, mentorships, and academic resources for osmania students by using webscrapping to dynamically fetch data.<br>
@@ -241,7 +241,7 @@
         <strong>Tools:</strong>VS Code
       </div>
       <div class="project">
-        <img src="c:\Users\user\OneDrive\Desktop\chatbot.jpg" alt="AI Chatbot">
+        <img src="chatbot.jpg" alt="AI Chatbot">
         <h3>AI Chatbot</h3>
         <p>ASHA is a Python Flask-based chatbot helping women find jobs, events, and mentorships. It uses keyword-based logic and real-time data fetching.<br>
         <strong>Languages:</strong> HTML, CSS, Python, JSON</p>
